--- a/styles.css
+++ b/styles.css
@@ -1,43 +1,30 @@
+:root {
+  height: 100%;
+}
 body {
-  background: white;
   font-family: 'Open Sans', sans-serif;
-  display: flex;
-  flex-direction: column;
+  margin: 0;
+  min-height: 100%;
+  background: #333;
 }
-
-.main-nav li {
-  width: 100px;
-}
-
-.main-nav a {
-  text-decoration: none;
-  color: black;
-  font-size: 21px;
+h1 {
   font-weight: 600;
-  color: #00a9d9;
+  margin: 0 0 5px 0;
 }
-
-.main-nav a:hover {
-  text-decoration: underline;
+p {
+  margin: 5px 0;
 }
-
-.main-nav ul {
-  list-style: none;
+article {
+  box-sizing: border-box;
+  background: #FFF;
+  margin: 5px;
+  flex: 1;
+}
+body {
   display: flex;
+  flex-direction: row;
+  align-items: baseline;
 }
-
-header {
-  background: red;
-  padding: 10px;
-}
-
-main {
-  background: yellow;
-  min-height: 40vh;
-  padding: 10px;
-}
-
-footer {
-  background: gray;
-  padding: 10px;
+.not-real {
+  align-self: flex-end;
 }
