On branch 05-css-using-flex-shrink-and-flex-grow-to-make-flexbox-children-resize-correctly

--- a/styles.css
+++ b/styles.css
@@ -3,24 +3,28 @@ body {
   margin: 0;
   color: yellow;
   display: flex;
-  flex-direction: row;
+  /*flex-direction: row;*/
 }
 
 .title-1 {
   background: red;
-  flex-basis: 150px;
+  /*flex-basis: 120px;
+  flex-grow: 1;*/
 }
 
 .title-2 {
   background: blue;
-  flex-basis: 150px;
+  /*flex-basis: 40px;
+  flex-grow: 2;*/
 }
 
 .title-3 {
   background: green;
-  flex-basis: 150px;
+  /*flex-basis: 100px;
+  flex-grow: 3;*/
 }
 
 h1 {
-
+  flex-basis: 200px;
+  flex-shrink: 0;
 }
