--- a/styles.css
+++ b/styles.css
@@ -3,28 +3,32 @@ body {
   margin: 0;
   color: yellow;
   display: flex;
-  /*flex-direction: row;*/
 }
 
 .title-1 {
   background: red;
-  /*flex-basis: 120px;
-  flex-grow: 1;*/
+  flex: 1;
+  /*flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 0;*/
 }
 
 .title-2 {
   background: blue;
-  /*flex-basis: 40px;
-  flex-grow: 2;*/
+  flex: 20px;
+  /*flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 20px;*/
 }
 
 .title-3 {
   background: green;
-  /*flex-basis: 100px;
-  flex-grow: 3;*/
+  flex: 0 80px;
+  /*flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: 80px;*/
 }
 
 h1 {
-  flex-basis: 200px;
-  flex-shrink: 0;
+  /*flex: 1;*/
 }
