On branch 07-css-turning-a-flexbox-into-a-grid-using-flex-wrap-and-align-content

--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,34 @@
+html {
+  height: 100%;
+}
+
 body {
   font-family: 'Open Sans', sans-serif;
   margin: 0;
   color: yellow;
+  height: 100%;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-content: stretch;
 }
 
-.title-1 {
-  background: red;
-  flex: 1;
-  /*flex-grow: 1;
-  flex-shrink: 1;
-  flex-basis: 0;*/
+figure {
+  margin: 0;
+  display: block;
+  height: 150px;
+  flex: 0 150px;
+  position: relative;
 }
 
-.title-2 {
-  background: blue;
-  flex: 20px;
-  /*flex-grow: 1;
-  flex-shrink: 1;
-  flex-basis: 20px;*/
-}
-
-.title-3 {
-  background: green;
-  flex: 0 80px;
-  /*flex-grow: 0;
-  flex-shrink: 1;
-  flex-basis: 80px;*/
-}
-
-h1 {
-  /*flex: 1;*/
+figcaption {
+  background: rgba(0, 0, 0, 0.5);
+  display: block;
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  text-align: center;
+  color: white;
+  padding: 4px;
+  box-sizing: border-box;
 }
